@@ -1,5 +1,8 @@
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
+	* logrtns.c (log_read_dates): Don't barf on multi-lines log
+	messages than don't include dates. Bug reported by John Rice
+
 	* log_repaint.c: (logview_unbold_rows),
 	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
 	(log_fill_model_date, logview_scroll_and_focus_path): Finally handle correctly
